fixed layout, added copy password, changed dark mode button

--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -2,7 +2,7 @@
 
 
 /* ::-webkit-scrollbar {
-  display: none;
+  width: 10px;
 } */
 
 #root {
